@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-11T16:21:53Z",
-  "count_outdated" : 648,
-  "uniques_outdated" : 370,
-  "count" : 668,
+  "timestamp" : "2022-11-12T01:21:11Z",
+  "count_outdated" : 651,
+  "uniques_outdated" : 371,
+  "count" : 670,
   "uniques" : 380,
   "clones" : [
-    {
-      "timestamp": "2022-10-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-29T00:00:00Z",
       "count": 5,
