@@ -1,12 +1,7 @@
 {
-  "count": 20,
+  "count": 19,
   "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2022-10-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-10-29T00:00:00Z",
       "count": 5,
