@@ -1,3 +1,11 @@
+2022-11-12T01:21:11Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3449000305 # 1020
+* notice: last 14d: unq all: 5 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 370 648 / 380 668
+* notice: next accum: outdated-unq outdated-all / unq all: 371 651 / 380 670
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-10-28] / []
+
 2022-11-11T16:21:53Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3446463391 # 1019
 * notice: last 14d: unq all: 5 20
